update application-dev.yml, add pipeline file and docker file